# ouroboros

./: .gitignore  Cargo.toml  ingest.txt
src/: main.rs  process.rs  storage.rs
