[package]
name = "ouroboros"
version = "0.0.1"
edition = "2024"
authors = ["Iskander 'Iskaa303' Madikhan"]
license = "MIT"

[dependencies]
eyre = "0.6"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
