[package]
name = "ouroboros"
version = "0.0.1"
edition = "2024"
authors = ["Iskander 'Iskaa303' Madikhan"]
license = "MIT"

[dependencies]
log = "0.4.29"
env_logger = "0.11.8"
dotenvy = "0.15.7"
eyre = "0.6.12"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
similar = "2.7.0"
chrono = "0.4.42"
